bundled_metadata/force-app/main/default/objects/Campaign_Questions__c/Campaign_Questions__c.object-meta.xml
<CustomObject>
    <description>Will be used to store campaign questions dynamically</description>
    <label>Campaign Question</label>
    <nameField>
        <label>Campaign Questions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>