bundled_metadata/force-app/main/default/objects/Campaign_Questions__c/fields/AFH_CapaignQuestion__c.field-meta.xml
<CustomField>
    <fullName>AFH_CapaignQuestion__c</fullName>
    <label>Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>