bundled_metadata/force-app/main/default/objects/Campaign_Questions__c/fields/AFH_Is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>AFH_Is_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Question Mandatory Checkbox</description>
    <label>Is Mandatory</label>
    <type>Checkbox</type>
</CustomField>