bundled_metadata/force-app/main/default/objects/Campaign_Questions__c/fields/AFH_Question_Order__c.field-meta.xml
<CustomField>
    <fullName>AFH_Question_Order__c</fullName>
    <description>This displays the order of the questions</description>
    <label>Question Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>