bundled_metadata/force-app/main/default/objects/Campaign_Questions__c/fields/AFH_QuestionType__c.field-meta.xml
<CustomField>
    <fullName>AFH_QuestionType__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Multi-Select Picklist</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Picklist + Free text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>