bundled_metadata/force-app/main/default/objects/Campaign_Questions__c/fields/AFH_Values__c.field-meta.xml
<CustomField>
    <fullName>AFH_Values__c</fullName>
    <label>Values</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>