bundled_metadata/force-app/main/default/objects/Campaign_Questions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>AFH_QuestionType__c</columns>
    <columns>AFH_Values__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>